--- a/confirmação.html
+++ b/confirmação.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/bootstrap-5.3.3-dist/css/bootstrap.css">
     <link rel="stylesheet"  href="/style.css">
-    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="/style-confimacao.css">
+    <link rel="shortcut icon" href="/layout-images/Group 13.png" type="image/x-icon">
     <!-- fontes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Italiana&family=Julius+Sans+One&family=Libre+Caslon+Display&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-    <title>Wengles e Larisa</title>
+    <title>Confirmação de prensença</title>
    
 </head>
 <body>
@@ -60,7 +60,7 @@
                 </div>
                 <!-- area de formulario -->
                 <form action="" class="d-flex flex-column" >
-                    <textarea  name="" id="convidados" cols="30" rows="10" placeholder="Area de convidados (escreva seu nome e confirme)" style="z-index: 6;"></textarea>
+                    <textarea  name="" id="convidados" cols="30" rows="10" placeholder="Por favor, confirme sua presença preenchendo seu nome e o nome dos acompanhantes que irão participar do nosso chá de casa nova. Se for uma família, por favor, escreva o nome de todos os integrantes. Agradecemos desde já." style="z-index: 6;"></textarea>
                     <button type="submit" id="enviarLista" class="btn-textarea my-5">confirmar</button>
                 </form>
 
